--- a/metadata.yaml
+++ b/metadata.yaml
@@ -42,5 +42,6 @@ subjects:
 - !lcsh 'Animals -- Juvenile fiction'
 - !lcsh 'Friendship -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: The Adventures of Prickly Porky
 url: http://www.gutenberg.org/ebooks/15521
